<resources>
    <string name="app_name">Daily Log</string>
    <string name="write_something_to_save">begin typing or click a button below to create today\'s entry</string>
    <string name="save">Save</string>
    <string name="refresh">Reload File</string>
    <string name="previous_logs">Previous Logs:</string>
    <string name="today">Today:</string>
    <string name="clear">Delete Contents of File</string>
    <string name="gym">Gym</string>
    <string name="dinner">Dinner</string>
    <string name="categoriesTitle">Categories</string>
    <string name="addACategory">add a category</string>
    <string name="preference_file_key">SharedPreferences</string>
    <string name="shortcutsTitle">Global Keyboard Shortcuts</string>
    <string name="addALabel">add a unique label</string>
    <string name="addText">full text</string>
    <string name="addCursor">cursor index</string>
    <string name="go_back_to_categories_screen">Go back to categories screen</string>
    <string name="categories_button">Go to Categories Screen</string>
    <string name="shortcuts_button">Go to Shortcuts Screen</string>
    <string name="shortcutsDescription">Shortcuts are automatically printed with spaces around them. For example \"w/\" will be printed as \"w/ \".</string>
    <string name="categoriesDescription">Categories are automatically printed with curly braces after them. For example \"lunch\" will be printed as \"lunch{ }\".</string>
    <string name="addToLogButton">Go to Log Screen</string>
    <string name="file_format_settings_title">File Settings</string>
    <string name="dateFormatTitle">Date Format</string>
    <string name="defaultStringPlaceholder">Default: %1$s</string>
    <string name="fileNameTitle">Filename Format</string>
</resources>
