<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fileSettingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shortcuts.CategorySettingsActivity">

    <TextView
    android:id="@+id/fileFormatSettingsTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/file_format_settings_title"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:textSize="24sp"
    android:layout_margin="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dateFormatRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fileFormatSettingsTitle">

        <TextView
            android:id="@+id/dateFormatTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateFormatTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/dateFormat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/dateFormatTitle"
            app:layout_constraintTop_toTopOf="@id/dateFormatTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/defaultStringPlaceholder"
            android:textSize="12sp"
            android:autofillHints="no"
            android:layout_marginEnd="10dp"
            android:imeOptions="actionDone"
            android:inputType="text"
            tools:ignore="TextFields" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateFormatRow">

        <TextView
            android:id="@+id/fileNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileNameTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/fileNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/fileNameTitle"
            app:layout_constraintTop_toTopOf="@id/fileNameTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/defaultStringPlaceholder"
            android:textSize="12sp"
            android:autofillHints="no"
            android:layout_marginEnd="10dp"
            android:imeOptions="actionDone"
            android:inputType="text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>