<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".settings.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fileSettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/shortcutLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fileFormatSettingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/file_format_settings_title"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dateFormatRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/constraintLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fileFormatSettingsTitle">

                <TextView
                    android:id="@+id/dateFormatTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/dateFormatTitle"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/dateFormat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="no"
                    android:hint="@string/defaultStringPlaceholder"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/dateFormatTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/dateFormatTitle"
                    tools:ignore="TextFields" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateFormatRow">

                <TextView
                    android:id="@+id/fileNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/fileNameTitle"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/fileNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:hint="@string/defaultStringPlaceholder"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/fileNameTitle"
                    app:layout_constraintEnd_toStartOf="@+id/selectFileButton"
                    app:layout_constraintTop_toTopOf="@id/fileNameTitle" />

                <ImageButton
                    android:id="@+id/selectFileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/select_file"
                    app:layout_constraintBottom_toBottomOf="@id/fileNameEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/fileNameEditText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/shortcutLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fileSettingsLayout">

            <TextView
                android:id="@+id/shortcutTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/shortcutsTitle"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/shortcutDescription"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/shortcutDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/shortcutsDescription"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shortcutTitle" />

            <LinearLayout
                android:id="@+id/shortcutList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/addShortcutInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shortcutDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/addShortcutInfo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/labelInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/textview_border"
                    android:hint="@string/addALabel"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:theme="@style/styledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/textInput"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="really long text" />

                <EditText
                    android:id="@+id/textInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/textview_border"
                    android:hint="@string/addText"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:theme="@style/styledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/cursorInput"
                    app:layout_constraintStart_toEndOf="@+id/labelInput"
                    tools:text="really long text" />

                <EditText
                    android:id="@+id/cursorInput"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/textview_border"
                    android:hint="@string/addCursor"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:theme="@style/styledText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnSaveShortcut"
                    app:layout_constraintStart_toEndOf="@+id/textInput"
                    tools:text="1200" />

                <ImageButton
                    android:id="@+id/btnSaveShortcut"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/save"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_save_black_48dp"
                    app:layout_constraintBottom_toBottomOf="@+id/cursorInput"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cursorInput"
                    app:layout_constraintTop_toTopOf="@+id/cursorInput" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>